--- a/tests/Users.IntegrationTests/Users.IntegrationTests.csproj
+++ b/tests/Users.IntegrationTests/Users.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -23,8 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\User.Api\User.Api.csproj" />
-    <ProjectReference Include="..\src\Users.Infrastructure\Users.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\src\User.Api\User.Api.csproj" />
+    <ProjectReference Include="..\..\src\Users.Infrastructure\Users.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
