Add users db context

--- a/src/Users.Infrastructure/Users.Infrastructure.csproj
+++ b/src/Users.Infrastructure/Users.Infrastructure.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Users.ApplicationCore\Users.ApplicationCore.csproj" />
   </ItemGroup>
 
