--- a/src/Users.ApplicationCore/Users.ApplicationCore.csproj
+++ b/src/Users.ApplicationCore/Users.ApplicationCore.csproj
@@ -7,4 +7,8 @@
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="10.0.1" />
+  </ItemGroup>
+
 </Project>
