--- a/src/Users.ApplicationCore/Users.ApplicationCore.csproj
+++ b/src/Users.ApplicationCore/Users.ApplicationCore.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
