--- a/tests/Users.UnitTests/Users.UnitTests.csproj
+++ b/tests/Users.UnitTests/Users.UnitTests.csproj
@@ -7,6 +7,8 @@
     <IsPackable>false</IsPackable>
 
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
+
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
